# agentshield

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  schema.sql  temp_proxy_deep.py  temp_proxy_recovery_utf8.py  temp_proxy_recovery_utf8_2.py
.github/workflows/: ci.yml
app/: config.py  cost_estimator.py  db.py  decorators.py  estimator.py  http_limiter.py  limiter.py  logic.py  main.py  models.py  schema.py  webhooks.py
app/middleware/: auth.py  security.py
app/routers/: admin_chat.py  admin_roles.py  ai_act_compliance.py  analytics.py  audit.py  (+17 more)
documentation/: 00_STRATEGIC_TECHNICAL_MANIFEST.md  01.1_INFRA_DOCKER.md  01.2_INFRA_RUST.md  01.3_INFRA_DEPENDENCIAS.md  01_INFRAESTRUCTURA.md  02.1_AUTH_LOGIC.md  02.2_PII_GUARD.md  02.3_AUTHORIZATION.md  02.4_ZERO_TRUST_AUDIT.md  02_SEGURIDAD.md  03.1_ARBITRAGE_RL.md  03.2_PRICING_SYNC.md  03.3_ESTIMATOR.md  03.4_WATERFALL_BUDGETING.md  03_FINANCIERO.md  04.1_PROXY_ROUTER.md  04.2_SEMANTIC_CACHE.md  04.3_RATE_LIMITER.md  04_PROXY_CORE.md  05.1_GREEN_METRICS.md  05.2_DASHBOARD_FINANCIALS.md  05.3_DASHBOARD_POLICIES.md  05.4_DASHBOARD_REPORTS.md  05.5_DASHBOARD_MARKET.md  05.6_DASHBOARD_SOVEREIGN.md  05_OBSERVABILIDAD.md  06_FRONTEND_STRATEGY.md  07_SECURE_RAG_VAULT.md  08_EVOLUTIONARY_AI.md  09_TOOL_GOVERNANCE_AND_MAGIC.md  10_FORENSIC_REPLAY.md  11_DYNAMIC_CONFIGURATION.md  12_AGENTSHIELD_OS.md  13_DECISION_GRAPH.md  14_APPLIANCE_DEPLOYMENT.md  15_AI_ROLES_AND_HUD.md
documentos/: 01_AUTH_MIDDLEWARE_GOD_TIER.md  02_SECURITY_MIDDLEWARE_GOD_TIER.md  03_ROUTERS_OVERVIEW.md  04_PROXY_ROUTER_DEEP_DIVE.md  05_AUTHORIZE_ROUTER_DEEP_DIVE.md  06_RECEIPT_ROUTER_DEEP_DIVE.md  07_COMPLIANCE_ROUTER_DEEP_DIVE.md  08_AUDIT_ROUTER_DEEP_DIVE.md  09_FORENSICS_ROUTER_DEEP_DIVE.md  10_ANALYTICS_ROUTER_DEEP_DIVE.md  11_DASHBOARD_ROUTER_DEEP_DIVE.md  12_TRUST_ROUTER_DEEP_DIVE.md  13_INVOICES_ROUTER_DEEP_DIVE.md  14_FEEDBACK_ROUTER_DEEP_DIVE.md  15_SAFETY_ENGINE_DEEP_DIVE.md  16_TOOL_GOVERNOR_DEEP_DIVE.md  17_IDENTITY_SERVICE_DEEP_DIVE.md  18_OBSERVER_SERVICE_DEEP_DIVE.md  19_HIVE_MIND_DEEP_DIVE.md  20_PORTFOLIO_APPS_ZENITH.md  21_EL_VIAJE_DEL_REQUEST_2026.md  APP_ESQUEMA_GLOBAL_GOD_TIER.md  AUTH_MIDDLEWARE_DIAGRAMA_COMPLETO.md  DYNAMIC_PII_CONFIGURATION.md  EU_AI_ACT_COMPLIANCE.md  GOD_TIER_BUDGET_SYSTEM.md  PROYECTO_ESQUEMA_GLOBAL.md  ROUTERS_VISION_GENERAL.md  SECURITY_MIDDLEWARE_DIAGRAMA_COMPLETO.md
rust_module/: Cargo.toml  pyproject.toml
rust_module/src/: lib.rs
scripts/: billing_worker.py  generate_pki.py  purge_user.sql  schema_carbon_governance.sql  schema_compliance.sql  schema_compliance_reporting.sql  schema_custom_pii.sql  schema_invoicing.sql  schema_roles.sql  schema_siem.sql  seed_compliance_rpc.sql  seed_constants.py  seed_dedicated_backend.sql  seed_file_guardian.sql  seed_governance_ledger.sql  seed_marketplace.sql  seed_quarantine.sql  seed_roles_gold.sql  seed_security_config.sql  seed_semantic_budget.sql  seed_system_config.sql  seed_system_constants.sql  seed_tools.py  seed_tools.sql  seed_trust_economy.sql  seed_trust_engine.sql  seed_unique_email_enforcement.sql  seed_welcome_trigger.sql  seed_whitelabel.sql  sync_prices.py  validate_schemas.py  verify_production.py
tests/: __init__.py  test_arbitrage.py  test_auth.py  test_billing.py  test_crypto_signer.py  test_entropy.py  test_llm_gateway.py  test_mcp_server.py  test_pii_guard.py  test_policy_engine.py  test_receipt_manager.py  test_safety_engine_evo.py  test_trust_system.py
(+62 files in other folders)
