[project]
name = "agentshield"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "E741",   # ambiguous variable name
    "F401",   # imported but unused (may be re-exported)
    "F811",   # redefinition (common in conditional imports)
    "F841",   # local variable assigned but never used
    "E722",   # bare except (legacy code)
    "W293",   # blank line contains whitespace
    "B006",   # mutable default arguments
    "B007",   # loop control variable not used
    "B023",   # function definition does not bind loop variable
    "B025",   # duplicate exception handler
    "B904",   # raise without from (legacy code)
    "C401",   # unnecessary generator
    "UP006",  # use dict instead of Dict (Python 3.9+)
    "UP015",  # unnecessary mode argument
    "UP035",  # deprecated typing imports
    "UP045",  # use X | None instead of Optional[X]
    "F541",   # f-string without placeholders
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"app/routers/*" = ["B008"]  # function call in default argument (FastAPI Depends)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "unit: marks unit tests (fast, no external deps)",
]

