[package]
name = "agentshield_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentshield_rust"
crate-type = ["cdylib"] # Importante para ser cargado por Python

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pkcs8 = { version = "0.10", features = ["std", "pem"] }
regex = "1.10"
lazy_static = "1.4"
crc32fast = "1.3"
